<resources>
    <string name="app_name">LADM_U4_Practica2_AlbumFotografico_CarlosyCarlos</string>
    <string name="appName2">Album Photos Sharing</string>
    <string name="aboutU">Acerca de Nosotros</string>
    <string name="exit">Salir</string>
    <string name="sessionOut">Cerrar Sesión</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="sessionIn">Inicial Sesión</string>
    <string name="createUser">Registrarse</string>
    <string name="passBackUp">Recuperar Contraseña</string>
    <string name="buttonTextSelector">Crear evento</string>
    <string name="eventTypePöpUp">Tipo de evento</string>
    <string name="correoPopUp">Correo:</string>
    <string name="clavePopUp">Clave:</string>
    <string name="claveUploadPhoto">Clave:</string>
    <string name="eventStatusUP">Estatus:</string>
    <string name="enviarBtnUP">enviar</string>
    <string name="sendImageBtnUp">Elegir imagen</string>
    <string name="eventID">Clave del evento </string>
    <string name="checkEvent">Verificar </string>
    <string name="eventDetailTitle">Datos de mi evento </string>
    <string name="eventDetailName">Nombre del evento </string>
    <string name="eventDetailType">Tipo de evento </string>
    <string name="eventDetailDate">Fecha del evento </string>
    <string name="eventDetailStatus">Status del evento </string>
    <string name="eventDetailUpdate">Actualizar </string>
    <string name="placeHolderCrEv">Ej. Fiesta de cumple, Boda etc.</string>
    <string name="mis_eventosSelector">Mis Eventos</string>
    <string name="keySelectorRemainder">Si cuenta con la clave de un evento, por favor ingrese el numero de evento para ingresar a el</string>
    <string name="eventNamePöpUp">Nombre del evento</string>
    <string name="eventDatePöpUp">Fecha del evento</string>
    <string name="eventDescriptionPöpUp">Descripcion</string>
    <string name="eventDescriptionAlertPöpUp">La descripcion del evento es opcional</string>
    <string name="suggestedDate">Formato sugerido de fecha: YYYY/MM/DD</string>
    <string name="eventPhotosText">Fotos tomadas en el evento</string>
    <string name="photoListIndications">Seleccione una foto de la lista para visualizarla aquí</string>
    <string name="eventStatus">Estado del evento</string>
    <string name="copyToClipboard">Compartir evento</string>
    <string name="indicationsMessage">
        Al momento de seleccionar el evento, la clave del evento seleccionado se copiara automaticamente al portapapeles
    </string>
    <string name="updateEventList">Actualizar lista de eventos</string>
    <string-array name="estadosEvento">
        <item>Abierto</item>
        <item>Cerrado</item>
        <item>Oculto</item>
    </string-array>
</resources>