<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".EditEventActivity">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eventDetailTitle"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_marginHorizontal="10dp"
        android:background="@color/salmon"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/eventDetailName"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="10dp"
        android:padding="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nombreEvento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/eventDetailType"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="10dp"
        android:padding="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tipoEvento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/eventDetailDate"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="10dp"
        android:padding="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fechaEvento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/suggestedDate"
        android:textAlignment="center"
        android:textColor="@color/gray"
    />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eventDetailUpdate"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp"
        android:id="@+id/updateEvent"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/regresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:fabSize="normal"
        android:layout_gravity="center"
        />
</LinearLayout>