<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:gravity="center">
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Aqui pondre el nombre del evento"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:background="@color/purple_200"
                    android:textSize="22sp"
                    android:layout_marginBottom="20dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/eventDatePöpUp"
                    android:textSize="15sp"
                    android:textColor="@color/dark_gray"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="Aqui ira la fecha del evento"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/eventDescriptionPöpUp"
                    android:textSize="15sp"
                    android:textColor="@color/dark_gray"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="Aqui ira descripcion del evento"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:id="@+id/listaFotosTexto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="#03CAB7"
                    android:text="@string/eventPhotosText"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:layout_marginVertical="5dp"
                    android:textSize="20sp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/photoListIndications"
                        android:layout_marginVertical="5dp"
                        android:textSize="15sp"
                        android:textColor="@color/dark_gray"
                        />
                <ImageView
                    android:id="@+id/IVimagen"
                    android:layout_width="300sp"
                    android:layout_height="300sp"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:src="@drawable/ic_baseline_camera_alt_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />


                <ListView
                    android:id="@+id/lvLista"
                    android:layout_width="match_parent"
                    android:layout_height="230sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/IVimagen" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabUP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    app:fabSize="mini"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>