<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="5sp"
    tools:context=".PhotoUpload">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="20dp">

                <TextView
                    android:id="@+id/txtDescripcion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/claveUploadPhoto"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/lbKeyEventUP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:textSize="20sp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                tools:layout_editor_absoluteX="16dp">

                <TextView
                    android:id="@+id/txtDireccion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/eventStatusUP"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/lbStatusEventUP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                tools:layout_editor_absoluteX="20dp">

                <Button
                    android:id="@+id/btnSeleccionar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10sp"
                    android:text="@string/sendImageBtnUp" />

                <Button
                    android:id="@+id/btnSubir"
                    android:layout_width="150sp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"
                    android:text="@string/enviarBtnUP" />
            </LinearLayout>


            <ImageView
                android:id="@+id/IVimagen"
                android:layout_width="300sp"
                android:layout_height="300sp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:src="@drawable/ic_baseline_alternate_email_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />


            <ListView
                android:id="@+id/lvLista"
                android:layout_width="match_parent"
                android:layout_height="230sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/IVimagen" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabUP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:fabSize="mini"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>